--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +18,100 @@
             font-family: "Manrope", sans-serif;
         }
     </style>
+    <!-- fontawsome -->
+    <script src="https://kit.fontawesome.com/2b0ee7a9ac.js" crossorigin="anonymous"></script>
+
+    <!-- customize tailwind Css -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                primary: '#ABEF5F',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 <body class="font-manrope">
     <!-- Header -->
-     
+     <header class="container mx-auto pt-[30px]">
+        <!-- navabr -->
+     <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <button class="p-[10px] mr-2 bg-[#ABEF5F] rounded-full"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+            <path d="M12.0068 2.05981L1.00318 13.0562" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
+            <path d="M6.00728 1.18939C6.00728 1.18939 11.6409 0.716378 12.4957 1.57157C13.3503 2.42678 12.8734 8.06017 12.8734 8.06017" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg></button>
+          <a class="font-black text-3xl ">Rinterio</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 tex-[#737373] font-light">
+            <li><a class="font-semibold text-[#494949]">Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+            <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h8m-8 6h16" />
+                  </svg>
+                </div>
+                <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                  <li><a>Home</a></li>
+                  <li><a>Services</a></li>
+                  <li><a>Portfolio</a></li>
+                  <li><a>Blog</a></li>
+                  <li><a>Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="flex gap-4">
+                <div class="p-[10px] bg-[#FFF] rounded-full border-2 border-[#E9E9E9]">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+                        <path d="M17.5078 17.5098L22.0063 22.0113" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M20.0097 11.0106C20.0114 6.04006 15.9833 2.00929 11.0127 2.00763C6.04213 2.00598 2.01136 6.03408 2.0097 11.0046C2.00805 15.9752 6.03615 20.006 11.0067 20.0076C15.9773 20.0093 20.008 15.9812 20.0097 11.0106Z" stroke="#737373" stroke-width="1.5" stroke-linejoin="round"/>
+                      </svg>
+                </div>
+                <div class="p-[10px] bg-[#FFF] rounded-full border-2 border-[#E9E9E9]">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+                        <path d="M8.00856 16.0278L15.2718 16.0302C19.7594 16.0317 20.4428 13.2127 21.2719 9.10126C21.5111 7.91536 21.6307 7.32242 21.3437 6.92727C21.0567 6.5321 20.5064 6.53192 19.4058 6.53155L6.01172 6.5271" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
+                        <path d="M8.00804 16.0277L5.39092 3.54177C5.16864 2.65135 4.36888 2.0265 3.45115 2.02619L2.5127 2.02588" stroke="#737373" stroke-width="1.5" stroke-linecap="round"/>
+                        <path d="M8.88879 16.0281L8.47736 16.0279C7.11401 16.0275 6.00841 17.1784 6.00793 18.5985C6.00786 18.8352 6.19199 19.0272 6.41922 19.0272L17.5078 19.0309" stroke="#737373" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10.5068 22.0286C11.3352 22.0289 12.007 21.3575 12.0073 20.5291C12.0076 19.7006 11.3362 19.0289 10.5078 19.0286C9.67939 19.0283 9.00759 19.6996 9.00731 20.5281C9.00704 21.3565 9.67839 22.0283 10.5068 22.0286Z" stroke="#737373" stroke-width="1.5"/>
+                        <path d="M17.5068 22.031C18.3352 22.0313 19.007 21.3599 19.0073 20.5315C19.0076 19.7031 18.3362 19.0313 17.5078 19.031C16.6794 19.0307 16.0076 19.7021 16.0073 20.5305C16.007 21.3589 16.6784 22.0307 17.5068 22.031Z" stroke="#737373" stroke-width="1.5"/>
+                      </svg>
+                </div>
+                <div class="btn bg-primary rounded-full px-5 px-3">
+                    <a class="font-bold text-[#1C1C1C]">Book Consultant</a>
+                    <div class="p-[10px] bg-[#1C1C1C] rounded-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                            <path d="M12.0117 2.10278L1.00806 13.0991" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M6.01168 1.23236C6.01168 1.23236 11.6453 0.759347 12.5 1.61454C13.3547 2.46975 12.8778 8.10314 12.8778 8.10314" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                    </div>
+                </div>
+            </div>
+          
+        </div>
+      </div>
+     </header>
     <!-- Main section -->
 </body>
 </html>
