--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
               <div class="btn bg-[#ABEF5F80] rounded-full text-[20px] mt-[32px] border-2 border-[#ABEF5F] w-full lg:w-[206px]">
                 <a class="font-bold text-[#1C1C1C]">View Details</a>
-                    <div class="p-[10px] bg-[#ABEF5F] rounded-full">
+                <!-- button -->
+                <div class="p-[10px] bg-[#ABEF5F] rounded-full">
                       <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
                         <path d="M12.0029 1.74121L0.999271 12.7375" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
                         <path d="M6.00289 0.87079C6.00289 0.87079 11.6365 0.397774 12.4913 1.25297C13.3459 2.10817 12.869 7.74156 12.869 7.74156" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -144,9 +145,50 @@
     <main>
       <div class="md:container mx-auto px-[20px]">
         <!-- About Us -->
-        <section>
-          <h1>hello</h1>
+        <section class="flex flex-col gap-10 pt-[100px] justify-center md:flex-row justify-left">
+          <!-- about us content -->
+          <div class="relative flex flex-col items-center w-full md:w-1/2 md:items-start">
+            <!-- tag button -->
+            <div class="flex items-center gap-[8px] px-2 py-2 bg-white w-[127px] rounded-full">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="ml-2">
+                <path d="M16.5565 9.00291H1.00015" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M12.928 4.14611C12.928 4.14611 17.2473 7.7938 17.2473 9.00289C17.2473 10.2119 12.9279 13.8596 12.9279 13.8596" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <p>About Us</p>
+            </div>
+
+            <div>
+              <h2 class="font-bold text-[24px] text-center mt-[16px] md:text-[40px] md:text-left">We design thoughtful, liveable spaces</h2>
+
+              <p class="mt-[24px] text-center md:text-left">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- about card -->
+            <div class="flex items-center gap-[24px] p-6 bg-white rounded-[16px] mt-[24px]">
+              <img src="assets/commercial.png" alt="building image">
+              <div>
+                <h3 class="font-extrabold text-[20px]">Commercial</h3>
+                <p class="mt-[10px]">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+
+            <div class="flex items-center gap-[24px] p-6 bg-white rounded-[16px] mt-[24px]">
+              <img src="assets/residential.png" alt="residential image">
+              <div>
+                <h3 class="font-extrabold text-[20px]">Residential</h3>
+                <p class="mt-[10px]">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+
+            <img class="absolute top-[-10%] left-[-8%] hidden md:block" src="assets/Vector.png" alt="spiral arrow">
+          </div>
+
+          <!-- about us image -->
+          <div class="">
+            <img src="assets/Rectangle.png" alt="house image">
+          </div>
         </section>
+
+        <!-- Our Work -->
       </div>
     </main>
 </body>
