--- a/index.html
+++ b/index.html
@@ -309,7 +309,39 @@
           </div>
         </section>
 
-        <!-- form section -->
+        <!-- Faq section extra -->
+        <section class="pt-[100px] py-[70px]">
+          <div class="grid gap-4 md:grid-cols-2">
+            <div>
+              <h2 class="font-extrabold text-[34px] text-center md:text-left">Frequently ask
+              questions</h2>
+            </div>
+
+            <div class="text-center md:text-left">
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What services do you offer?</div>
+                <div class="collapse-content">
+                  <p>We offer a comprehensive range of interior design services including space planning, furniture selection, color consultation, lighting design, and project management. We cater to both residential and commercial projects, ensuring each space is designed to meet your unique needs and style.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium"> How do you determine the cost of a project?</div>
+                <div class="collapse-content">
+                  <p>The cost of a project depends on various factors including the scope of work, the size of the space, the materials and finishes selected, and the level of customization required. After an initial consultation, we provide a detailed estimate that outlines all costs associated with the project.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-plus bg-base-200">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">How long does a typical project take?</div>
+                <div class="collapse-content">
+                  <p>The timeline of a project varies depending on the complexity and scale of the design. A simple room refresh might take a few weeks, while a full home renovation can take several months. During our initial consultation, we’ll provide a project timeline to give you a clear idea of what to expect.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
       <!-- form section -->
       <section class="bg-[url('/assets/bg.jpg')] px-[20px] bg-no-repeat bg-cover border-8 border-white">
@@ -354,7 +386,7 @@
         </div>
       </section>
     </main>
-
+    <!-- Footer section -->
     <footer class="footer footer-center bg-[#1C1C1C] text-white
       py-[72px] px-[32px]">
       <div>
