--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <p class="mt-[24px] text-center md:text-left">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
             <!-- about card -->
-            <div class="flex items-center gap-[24px] p-6 bg-white rounded-[16px] mt-[24px]">
+            <div class="flex items-start gap-[24px] p-6 bg-white rounded-[16px] mt-[24px] md:items-center">
               <img src="assets/commercial.png" alt="building image">
               <div>
                 <h3 class="font-extrabold text-[20px]">Commercial</h3>
@@ -171,7 +171,7 @@
               </div>
             </div>
 
-            <div class="flex items-center gap-[24px] p-6 bg-white rounded-[16px] mt-[24px]">
+            <div class="flex items-start gap-[24px] p-6 bg-white rounded-[16px] mt-[24px] md:items-center">
               <img src="assets/residential.png" alt="residential image">
               <div>
                 <h3 class="font-extrabold text-[20px]">Residential</h3>
@@ -255,7 +255,7 @@
           <div class="mt-[16px] grid grid-cols-1 gap-[16px] md:mt-[32px] md:grid-cols-4">
             <!-- p-card1 -->
             <div class="p-[24px] bg-white rounded-[16px] flex flex-col gap-[24px] order-1 md:flex-row md:col-span-3 md:order-1">
-              <img src="assets/img1.png" alt="house-image">
+              <img src="./assets/img1.png" alt="house-image">
               <div class="flex flex-col justify-start items-start gap-[16px]">
                 <h3 class="font-extrabold text-[20px] md:text-[24px]">Commercial</h3>
                 <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
@@ -344,7 +344,7 @@
         </section>
       </div>
       <!-- form section -->
-      <section class="bg-[url('/assets/bg.jpg')] px-[20px] bg-no-repeat bg-cover border-8 border-white">
+      <section class="bg-[url('assets/bg.jpg')] px-[20px] bg-no-repeat bg-cover border-8 border-white">
         <div class="md:container mx-auto pt-[72px] pb-[72px]">
           <!-- form contetn -->
           <div class="flex flex-col gap-[16px] justify-center items-center">
